perf(api): reduce query overhead and tune database access